--- a/11ty/_includes/head.html
+++ b/11ty/_includes/head.html
@@ -3,5 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>11ty Site</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/dist/css/main.css">
 </head>
